# 2026RoboCon

./: .gitignore  .mxproject  CMakeLists.txt  Practice.c  README.md  Test01_2026_03_26.ioc
Core/Inc/: can.h  cmsis_os.h  gpio.h  ins_task.h  lift.h  usart.h
Core/Src/: lift.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal.c
cmake/stm32cubemx/: CMakeLists.txt
